fix text align broke

--- a/src/components/ChatDisplay/style.css
+++ b/src/components/ChatDisplay/style.css
@@ -1,6 +1,7 @@
 .message-container {
-  height: 50px;
+  /*height: 50px;*/
   padding: 4px 16px 4px 16px;
+  overflow: auto;
 }
 
 .display-name {
